# virtual_painter

./: .gitignore  CMakeLists.txt  README.md
src/: color_picker.cpp  main.cpp
